@@ -73,6 +73,7 @@ const Vertex3D_NoTex2 gatePlateMesh[70]=
 { 0.360857f,0.004720f,0.006723f, -0.000000f,0.000000f,1.000000f, 0.246821f,0.100587f},
 { 0.360857f,-0.005280f,0.006723f, -0.000000f,0.000000f,1.000000f, 0.246821f,0.119566f}
 };
+
 const WORD gatePlateIndices[156]=
 {
    0,1,2,1,0,3,4,5,6,6,7,4,8,9,10,
